<resources>
    <string name="app_name">简易计算器</string>

    <string name="app_help">实现了基础的运算</string>
    <string name="app_more">更多的功能，包括了汇率转换以及精度更高的本金、本息计算、单位换算和科学计算等</string>
    <string name="science_cal">科学计算</string>
    <string name="science_help">实现了基础运算、复数运算、科学计数法和基础的函数，长按按键会显示帮助</string>
    <string name="exchange_cal">汇率计算</string>
    <string name="principal_interest_cal">本金和利息计算</string>
    <string name="reduced">单位换算</string>
    <string name="input_number">请输入数字</string>
    <string name="repayment_choice">选择还款方式：</string>
    <string name="repaydate_choice">选择贷款期限：</string>
    <string name="interest_rate">输入年化利率：</string>

</resources>
