<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreFunctionActivity">

    <Button
        android:id="@+id/principalbut2"
        android:layout_width="308dp"
        android:layout_height="82dp"
        android:layout_marginTop="204dp"
        android:onClick="goToScience"
        android:text="@string/science_cal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exchangeBut" />

    <Button
        android:id="@+id/exchangeBut"
        android:layout_width="308dp"
        android:layout_height="82dp"
        android:layout_marginTop="88dp"
        android:onClick="goToExchange"
        android:text="@string/exchange_cal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/principalbut"
        android:layout_width="308dp"
        android:layout_height="82dp"
        android:layout_marginTop="60dp"
        android:onClick="goTointerest"
        android:text="@string/principal_interest_cal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exchangeBut" />

    <Button
        android:id="@+id/gotoreduced"
        android:layout_width="308dp"
        android:layout_height="82dp"
        android:layout_marginTop="408dp"
        android:onClick="goToreduced"
        android:text="@string/reduced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exchangeBut" />
</androidx.constraintlayout.widget.ConstraintLayout>